--- a/markdown/_Part_git.html
+++ b/markdown/_Part_git.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0071)file:///C:/Users/Gauth/AppData/Local/Temp/_MarkdownMonster_Preview.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <!--<base href="file:///C:\Users\Gauth\Desktop\markdown\md\">--><base href=".">
+  <!--<base href="file:///C:\Users\Gauth\Desktop\exam\markdown\md\">--><base href=".">
   
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
   <link href="./_Part_git_files/twilight.css" rel="stylesheet">
   <script src="./_Part_git_files/highlight.pack.js.téléchargement"></script>
   <script src="./_Part_git_files/preview.js.téléchargement" id="PreviewScript"></script>
-  
+  <title>Diapo  |  Partie Git & Github</title>
 </head>
 <body>
 <div id="MainContent">
@@ -35,11 +35,11 @@ $ git clone &lt;Le path du dépot existant&gt;
 <p>Cette commande permet de fetch et pull une version actuelle d'un dépot distant, cela permet autre entre d'apportée des modifications à votre dépot local.</p>
 <h3 id="ajoutée-un-remote">Ajoutée un remote</h3>
 <pre><code class="language-git">
-$ git remote add &lt;le path du depot distant&gt; &lt;Mettre le nom du remote&gt;
+$ git remote add &lt;Mettre le nom du remote&gt; &lt;le path du depot distant&gt; 
 $ git remote -v
 
 </code></pre>
-<p>Parfois les dépot non pas de remote préconfigurée, se qui est embétant sans sa impossible d'accédée aux dépôt distant, dans ce contexte il faudras ajoutée ce remote. Notée qu'un dépot peu avoir plusieurs remote, d'où l'importance de nommée ces remotes.</p>
+<p>Parfois les dépot non pas de remote préconfigurée, ce qui est embétant sans sa impossible d'accédée aux dépôt distant, dans ce contexte il faudras ajoutée ce remote. Notée qu'un dépot peu avoir plusieurs remote, d'où l'importance de nommée ces remotes, par défaut le nom du remote est origin.</p>
 <p>Remote -v permet de visualisée les remote disponible sur le dépot.</p>
 <h3 id="connaitre-létat-de-votre-dépot">Connaitre l'état de votre dépot</h3>
 <pre><code class="language-git">$ git status
