--- a/markdown/_part_php.html
+++ b/markdown/_part_php.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- saved from url=(0071)file:///C:/Users/Gauth/AppData/Local/Temp/_MarkdownMonster_Preview.html -->
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <!--<base href="file:///C:\Users\Gauth\Desktop\">--><base href=".">
+  <!--<base href="file:///C:\Users\Gauth\Desktop\exam\markdown\md\">--><base href=".">
   
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,6 +13,7 @@
   <link href="./_part_php_files/twilight.css" rel="stylesheet">
   <script src="./_part_php_files/highlight.pack.js.téléchargement"></script>
   <script src="./_part_php_files/preview.js.téléchargement" id="PreviewScript"></script>
+  <title>Diapo  |  Partie PHP</title>
   
 </head>
 <body>
@@ -154,7 +155,7 @@ Dans la <strong>div</strong> il y as l'attribut <strong>Class</strong> qui prend
 	
 
 </code></pre>
-<p>Globalement c'est un tableau multidimentionnel regrouppant les keys et value destinée à interragir avec les formulaires cotée <strong>Views</strong> et le <strong>Controller</strong>.</p>
+<p>Globalement c'est un tableau multidimentionnel regrouppant les keys et value destinée à interagir avec les formulaires cotée <strong>Views</strong> et le <strong>Controller</strong>.</p>
 <p>Chaque tableau est associée à un champ particulier, ce moyen est propre à Ci: la Key field correspond à l'input en fonction de sa valeur <strong>name</strong>. La key Label est destinée aux rapport d'erreur de la cellule (la div regrouppant le champs). Enfin la Key rules définit les règles du champ.</p>
 <p>Cette synthaxe est propre à Ci3, les OU logique ici sont interprétée de cette sorte par exemple.
 Pourquoi cette façon ? Simple cela évite le gros patée de règle dans le <strong>Controller</strong>, morcelé le contrôle des formulaires permet aussi de le rendre modulables sur tout le site.</p>
