--- a/home.html
+++ b/home.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-
     <style>.container{width:100%;min-width:100%;}ul,li{list-style-type:none;}</style>
     <title>Diapo  |  Home</title>
 </head>
@@ -16,11 +15,11 @@
     </header>
     <nav class="nav">
         <ul class="navbar col-12 py-3 text-center">
-            <li class="link-item"><a class="nav-brand col-2" href="">HTML</a></li>
-            <li class="link-item"><a class="nav-brand col-2" href="">CSS</a></li>
-            <li class="link-item"><a class="nav-brand col-2" href="">SQL</a></li>
-            <li class="link-item"><a class="nav-brand col-2" href="">PHP</a></li>
-            <li class="link-item"><a class="nav-brand col-2" href="">GIT</a></li>
+            <li class="link-item"><a class="nav-brand col-2" href="markdown/_Part_html.html">HTML</a></li>
+            <li class="link-item"><a class="nav-brand col-2" href="markdown/_Part_css.html">CSS</a></li>
+            <li class="link-item"><a class="nav-brand col-2" href="markdown/_Part_sql.html">SQL</a></li>
+            <li class="link-item"><a class="nav-brand col-2" href="markdown/_part_php.html">PHP</a></li>
+            <li class="link-item"><a class="nav-brand col-2" href="markdown/_Part_git.html">GIT</a></li>
         </ul>
     </nav>
 </body>
