--- a/markdown/_Part_sql.html
+++ b/markdown/_Part_sql.html
@@ -13,7 +13,7 @@
   <link href="./_Part_sql_files/twilight.css" rel="stylesheet">
   <script src="./_Part_sql_files/highlight.pack.js.téléchargement"></script>
   <script src="./_Part_sql_files/preview.js.téléchargement" id="PreviewScript"></script>
-  
+  <title>Diapo  |  Partie SQL</title>
 </head>
 <body>
 <div id="MainContent">
