--- a/markdown/_Part_sql.html
+++ b/markdown/_Part_sql.html
@@ -6,16 +6,21 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="./_Part_sql_files/font-awesome.min.css" rel="stylesheet">
-
+  <link href="./_Part_html_files/bootstrap.min.css" rel="stylesheet">
   <link href="./_Part_sql_files/Theme.css" rel="stylesheet">
 
   <script src="./_Part_sql_files/jquery.min.js.téléchargement"></script>
   <link href="./_Part_sql_files/twilight.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/style.css">
   <script src="./_Part_sql_files/highlight.pack.js.téléchargement"></script>
   <script src="./_Part_sql_files/preview.js.téléchargement" id="PreviewScript"></script>
   <title>Diapo  |  Partie SQL</title>
 </head>
-<body>
+<body class="container">
+  <header class="row bg-dark">
+    <h1 class="col-6 offset-1 py-1 my-1"><a href="../home.html" class="nav-brand">Fil&nbsp;<span>rouge</span></a></h1>
+    <h1 class="col-auto offset-1 py-1 my-1"><a href="_part_php.html" class="nav-brand">&nbsp;<span>vers PHP..</span></a></h1> 
+</header>
 <div id="MainContent">
     <!-- Markdown Monster Content -->
     <h2 id="partie-uml-et-sql">Partie UML et SQL</h2>
