--- a/markdown/_Part_git.html
+++ b/markdown/_Part_git.html
@@ -6,16 +6,19 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="./_Part_git_files/font-awesome.min.css" rel="stylesheet">
-
+  <link href="./_Part_html_files/bootstrap.min.css" rel="stylesheet">
   <link href="./_Part_git_files/Theme.css" rel="stylesheet">
-
   <script src="./_Part_git_files/jquery.min.js.téléchargement"></script>
   <link href="./_Part_git_files/twilight.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/style.css">
   <script src="./_Part_git_files/highlight.pack.js.téléchargement"></script>
   <script src="./_Part_git_files/preview.js.téléchargement" id="PreviewScript"></script>
   <title>Diapo  |  Partie Git & Github</title>
 </head>
-<body>
+<body class="container">
+    <header class="row bg-dark">
+        <h1 class="col-6 offset-1 py-1 my-1"><a href="../home.html" class="nav-brand">Fil&nbsp;<span>rouge</span></a></h1>
+    </header>
 <div id="MainContent">
     <!-- Markdown Monster Content -->
     <h2 id="github-et-git">Github et Git</h2>
