--- a/markdown/_part_php.html
+++ b/markdown/_part_php.html
@@ -6,17 +6,22 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link href="./_part_php_files/font-awesome.min.css" rel="stylesheet">
-
+  <link href="./_Part_html_files/bootstrap.min.css" rel="stylesheet">
   <link href="./_part_php_files/Theme.css" rel="stylesheet">
 
   <script src="./_part_php_files/jquery.min.js.téléchargement"></script>
   <link href="./_part_php_files/twilight.css" rel="stylesheet">
+  <link rel="stylesheet" href="../assets/css/style.css">
   <script src="./_part_php_files/highlight.pack.js.téléchargement"></script>
   <script src="./_part_php_files/preview.js.téléchargement" id="PreviewScript"></script>
   <title>Diapo  |  Partie PHP</title>
   
 </head>
-<body>
+<body class="container">
+    <header class="row bg-dark">
+        <h1 class="col-6 offset-1 py-1 my-1"><a href="../home.html" class="nav-brand">Fil&nbsp;<span>rouge</span></a></h1>
+        <h1 class="col-auto offset-1 py-1 my-1"><a href="_Part_git.html" class="nav-brand">&nbsp;<span>vers Git..</span></a></h1> 
+    </header>
 <div id="MainContent">
     <!-- Markdown Monster Content -->
     <h2 id="partie-crud-produits">Partie Crud produits</h2>
