style(assets/app.js) : mode nuit

--- a/home.html
+++ b/home.html
@@ -5,14 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="assets/js/app.js" defer></script>
     <title>Diapo  |  Home</title>
 </head>
 
 <body class="container">
-    <header class="row bg-dark">
-        <h1 class="col-auto offset-1 py-2">Fil&nbsp;<span>rouge</span></h1>   
+    <header class="row wrap-sombre">
+        <h1 class="col-auto offset-1 py-2 titleH">Fil&nbsp;<span>rouge</span></h1>   
     </header>
-    <nav class="nav">
+	<div class="row">
+		<button class="col-2 btn-custom row">
+			<img class="mn" src="assets/img/eye_open.png">
+		</button>
+	</div>
+    <nav class="nav row">
         <ul class="navbar col-12 py-3 text-center">
             <li class="link-item"><a class="nav-brand col-2" href="markdown/_Part_html.html">HTML</a></li>
             <li class="link-item"><a class="nav-brand col-2" href="markdown/_Part_css.html">CSS</a></li>
