--- a/markdown/_Part_html.html
+++ b/markdown/_Part_html.html
@@ -14,14 +14,20 @@
   <link rel="stylesheet" href="../assets/css/style.css">
   <script src="./_Part_html_files/highlight.pack.js.téléchargement"></script>
   <script src="./_Part_html_files/preview.js.téléchargement" id="PreviewScript"></script>
+  <script src="../assets/js/app.js" defer></script>
   <title>Diapo  | Partie HTML</title>
   
 </head>
 <body class="container">
-    <header class="row bg-dark">
-        <h1 class="col-6 offset-1 py-1 my-1"><a href="../home.html" class="nav-brand">Fil&nbsp;<span>rouge</span></a></h1>
+    <header class="row wrap-sombre">
+        <h1 class="col-6 offset-1 py-1 my-1"><a href="../home.html" class="nav-brand titleH">Fil&nbsp;<span>rouge</span></a></h1>
         <h1 class="col-auto offset-1 py-1 my-1"><a href="_Part_css.html" class="nav-brand">&nbsp;<span>vers CSS..</span></a></h1> 
     </header>
+	<div class="row">
+		<button class="col-2 btn-custom">
+			<img class="mn" src="../assets/img/eye_open.png" alt="open">
+		</button>
+	</div>
 <div id="MainContent">
     <!-- Markdown Monster Content -->
     <h2 id="partie-html-du-fil-rouge">Partie Html du fil rouge</h2>
