--- a/markdown/_Part_sql.html
+++ b/markdown/_Part_sql.html
@@ -14,13 +14,19 @@
   <link rel="stylesheet" href="../assets/css/style.css">
   <script src="./_Part_sql_files/highlight.pack.js.téléchargement"></script>
   <script src="./_Part_sql_files/preview.js.téléchargement" id="PreviewScript"></script>
+  <script src="../assets/js/app.js" defer></script>
   <title>Diapo  |  Partie SQL</title>
 </head>
 <body class="container">
-  <header class="row bg-dark">
-    <h1 class="col-6 offset-1 py-1 my-1"><a href="../home.html" class="nav-brand">Fil&nbsp;<span>rouge</span></a></h1>
+  <header class="row wrap-sombre">
+    <h1 class="col-6 offset-1 py-1 my-1"><a href="../home.html" class="nav-brand titleH">Fil&nbsp;<span>rouge</span></a></h1>
     <h1 class="col-auto offset-1 py-1 my-1"><a href="_part_php.html" class="nav-brand">&nbsp;<span>vers PHP..</span></a></h1> 
 </header>
+<div class="row">
+  <button class="col-2 btn-custom">
+    <img class="mn" src="../assets/img/eye_open.png" alt="open">
+  </button>
+</div>
 <div id="MainContent">
     <!-- Markdown Monster Content -->
     <h2 id="partie-uml-et-sql">Partie UML et SQL</h2>
